Fixed alignment on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,8 @@ body {
     color: gray;
 }
 #JClohosey {
-    background-color: rgb(9, 202, 9);
+    color: limegreen;
+    background-color: rgb(0, 0, 0);
     text-align: center;
     /* align-items: center; */
     width: 40%;
@@ -52,7 +53,7 @@ body {
 .contact {
     background-color: white;
     width: 960px;
-    height: 400px;
+    height: 450px;
     margin: auto;
     margin-top: 5em;
 }
@@ -71,4 +72,16 @@ body {
 .footer {
     background-color: darkgray;
     border-top: darkgreen;
+}
+.nameBar {
+    width: 100%;
+    background-color: rgb(240, 240, 240);
+}
+.emailBar {
+    width: 100%;
+    background-color: rgb(240, 240, 240);
+}
+.messageBar {
+    width: 100%;
+    background-color: rgb(240, 240, 240);
 }
